release/1.11/VERSION.md
# 1.11

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.11```   |
| Release Time   | ```2016-11-14T14:34:40+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.11```   |
| sha1   | ```c64959fe73672e9b053b157f57b6aba318d0b3b5```   |
| size   | ```131073```   |
| total size  | ```125357479```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/c64959fe73672e9b053b157f57b6aba318d0b3b5/1.11.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```780e46b3a96091a7f42c028c615af45974629072```   |
| size   | ```9183701```   |
| url       | ```https://piston-data.mojang.com/v1/objects/780e46b3a96091a7f42c028c615af45974629072/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```48820c84cb1ed502cb5b2fe23b8153d5e4fa61c0```   |
| size   | ```9713666```   |
| url       | ```https://piston-data.mojang.com/v1/objects/48820c84cb1ed502cb5b2fe23b8153d5e4fa61c0/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |