release/1.11.1/VERSION.md
# 1.11.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.11.1```   |
| Release Time   | ```2016-12-20T14:05:34+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.11```   |
| sha1   | ```c64959fe73672e9b053b157f57b6aba318d0b3b5```   |
| size   | ```131073```   |
| total size  | ```125357479```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/c64959fe73672e9b053b157f57b6aba318d0b3b5/1.11.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```0935745a11806d6b4cf00221938e7560c23f9291```   |
| size   | ```9198018```   |
| url       | ```https://piston-data.mojang.com/v1/objects/0935745a11806d6b4cf00221938e7560c23f9291/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```1f97bd101e508d7b52b3d6a7879223b000b5eba0```   |
| size   | ```9720769```   |
| url       | ```https://piston-data.mojang.com/v1/objects/1f97bd101e508d7b52b3d6a7879223b000b5eba0/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |